--- a/index.html
+++ b/index.html
@@ -5,12 +5,57 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div class="barrabacan">
         <ul class="barraprincipal">
             <li><a href="x" class="botonmenu"> Inicio </a></li>
             <li><a href="x" class="botonmenu"> Quiénes somos </a></li>
-            <li><img class="logo" src="images/LogotipoSophiaLT_01-LogoFondoBlanco.png" alt="imagen" title=""imagen"></li>
+            <li><a href="index.html"><img class="logo" src="images/LogotipoSophiaLT_01-LogoFondoNegro.png" alt="imagen" title="imagen"></a></li>
             <li><a href="x" class="botonmenu"> Software </a></li>
             <li><a href="x" class="botonmenu"> Soporte </a></li>
         </ul>
+        <div class="p1">
+            <img class="imagen" src="images/LogotipoSophiaLT_01-LogoFondoNegro.png" alt="imagen" title="SophiaSearchLogo">
+        </div>
+        <div class="textoportada">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, error iste. Enim animi est, amet culpa excepturi dignissimos officiis earum voluptates sapiente ipsum impedit eius odit dolore blanditiis cupiditate et?
+            </div>
+
+        </div>
+
+        <ul class="presentacion">  
+            <li class="texto2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias sit quasi molestias sed dolorem quibusdam illum dolores, cum fuga, enim consectetur explicabo sapiente a ipsum sint officia ex, eveniet natus.</li>
+            <li>
+                <img class="imagen2" src="images/Imagen pegada.png">
+            </li>
+        </ul>
+        <div class="barrabacan2">
+
+        </div>
+        <div class="finalpag">
+            <ul class="formulariofinal">
+                <ul class="textofinal1">
+                    <div class="enunciadolista"> <b>Contacto</b> </div>
+                    <li> info1 </li>
+                    <li> info2 </li>
+                    <li> info3 </li>
+                    <li> info4 </li>
+                </ul>
+                <ul class="textofinal1">
+                    <div class="enunciadolista"> <b>Medios de pago</b> </div>
+                    <li> info1 </li>
+                    <li> info2 </li>
+                    <li> info3 </li>
+                    <li> info4 </li>
+                </ul>
+                    <ul class="textofinal1">
+                    <div class="enunciadolista"> <b>Asociados</b> </div>
+                    <li> info1 </li>
+                    <li> info2 </li>
+                    <li> info3 </li>
+                    <li> info4 </li>
+                </ul>
+            </ul>
+        </div>
+
     </body>
 </html>
